added: Webapp config to proc